<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bkgndColour"
    tools:context="com.londonappbrewery.bitcointicker.MainActivity">


    <LinearLayout
        android:id="@+id/middle_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:orientation="vertical"
        android:layout_above="@+id/bottom_layout"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/buy_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/buy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_weight="2"
                android:padding="?android:attr/listPreferredItemPaddingRight"
                android:text="@string/buy_text"
                android:textColor="@color/fontColour"
                android:textSize="35sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/buyPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="?android:attr/listPreferredItemPaddingLeft"
                android:text="@string/label_default_text"
                android:textColor="@color/fontColour"
                android:textSize="35sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sell_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sell_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_weight="2"
                android:padding="?android:attr/listPreferredItemPaddingRight"
                android:text="@string/sell_text"
                android:textColor="@color/fontColour2"
                android:textSize="35sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/sellPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="?android:attr/listPreferredItemPaddingLeft"
                android:text="@string/label_default_text"
                android:textColor="@color/fontColour2"
                android:textSize="35sp"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/base"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:dropDownSelector="@color/fontColour"
            android:spinnerMode="dropdown"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/imageview_desc"
        android:src="@drawable/bitcoin_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
